--- a/app/src/style.css
+++ b/app/src/style.css
@@ -2,3 +2,9 @@ body {
     margin: 0px;
     background-color: white;
 }
+h2 {
+  font-size: 1.25rem;
+  font-weight: bold;
+  color: #1f2937; /* text-gray-800 */
+  margin-bottom: 1rem;
+}
