--- a/app/src/style.css
+++ b/app/src/style.css
@@ -18,12 +18,14 @@
 body {
   background-color: var(--background-color);
   color: var(--text-color);
+  height: 100%;
 }
 
 html{
     overflow: hidden !important;
 }
 button {
+
   background-color: var(--background-color);
   color: white;
     border-radius: 0.375rem;
