--- a/app/src/style.css
+++ b/app/src/style.css
@@ -8,12 +8,12 @@
 }
 
 /* Dark Theme */
-[data-theme='dark'] {
-  --background-color: #2c3e50;
-  --text-color: #ecf0f1;
-  --primary-color: #9b59b6;
+[data-theme='brown'] {
+  --background-color: #ffffff;
+    --background-color-contrast: #50392c;
+  --text-color: #000000;
+  --primary-color: #512a65;
 }
-
 
 body {
   background-color: var(--background-color);
@@ -41,8 +41,6 @@ button {
 .bottom-sheet__main {
     overflow: hidden !important;
 }
-
-
 
 h2 {
   font-size: 1.25rem;
